syntax = "proto3";

package com.github.noelyap.setterforcatan;

option java_package = "com.github.noelyap.setterforcatan.protogen";

message Edge {
  enum Position {
    ALL = 0;
    TOP_RIGHT = 1;
    RIGHT = 2;
    BOTTOM_RIGHT = 3;
    BOTTOM_LEFT = 4;
    LEFT = 5;
    TOP_LEFT = 6;
  }
}

message Vertex {
  enum Position {
    ALL = 0;
    TOP = 1;
    TOP_RIGHT = 2;
    BOTTOM_RIGHT = 3;
    BOTTOM = 4;
    BOTTOM_LEFT = 5;
    TOP_LEFT = 6;
  }
}

message Face {
  enum Position {
    FACE_UP = 0;
    FACE_DOWN = 1;
  }
}

message Coordinate {
  int32 x = 1;
  int32 y = 2;
  repeated Edge.Position edge_positions = 3;
  repeated Vertex.Position vertex_positions = 4;
  Face.Position face_position = 5;
}

message Coordinates {
  string name = 1;
  repeated Coordinate coordinates = 2;
}
