syntax = "proto3";

package noelyap.setterforcatan;

option java_package = "noelyap.setterforcatan.protogen";

import "coordinate.proto";

message Tile {
  enum Type {
    UNDEFINED = 0;
  
    GENERIC_HARBOR = 1;
    BRICK_HARBOR = 2;
    GRAIN_HARBOR = 3;
    LUMBER_HARBOR = 4;
    ORE_HARBOR = 5; 
    WOOL_HARBOR = 6;
  
    DESERT = 7;
    FIELD = 8;
    FOREST = 9;
    HILL = 10;
    MOUNTAIN = 11;
    PASTURE = 12;
  
    SEA = 13;
    LAKE = 14;
    FISHERY = 15;
    RIVER = 16;
  
    GOLD_FIELD = 17;
    SWAMP = 18;
    OASIS = 19;
    CASTLE = 20;
    GLASSWORKS = 21;
    QUARRY = 22;
  
    DEVELOPMENT_CARD = 23;
    VICTORY_POINT = 24;
    CHIT = 25;
  }

  Type type = 1;
  repeated Vertex.Position specialVertices = 2;
}

message Tiles {
  string name = 1;
  repeated Tile tiles = 2;
  bool chitless = 3;
}
